BE/error/src/main/java/com/example/demo/common/support/dto/AbstractRequestDto.java
package com.example.demo.common.support.dto;

public interface AbstractRequestDto extends AbstractDto {}